--- a/public/package.json
+++ b/public/package.json
@@ -15,6 +15,7 @@
     "angular-cookies": "^1.6.4",
     "angular-resource": "^1.6.4",
     "bulma": "^0.4.2",
-    "fontawesome": "^4.7.2"
+    "fontawesome": "^4.7.2",
+    "vivus": "^0.4.1"
   }
 }
